<resources>
    <string name="app_name">Pansaka Backoffice</string>

    <!-- Splash Screen -->
    <string name="image_splash_screen">image_splash_screen</string>
    <string name="backoffice">BACKOFFICE</string>
    <string name="aplikasi_pansaka">APLIKASI PANSAKA</string>

    <!-- Login -->
    <string name="welome">Selamat Datang</string>
    <string name="inputan">Masukkan username dan password untuk masuk ke aplikasi.</string>
    <string name="username">Masukkan Username</string>
    <string name="password">Masukkan Password</string>
    <string name="masuk">Masuk</string>

    <!-- Nav Bar -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="customer_fragment">Customer Fragment</string>
    <string name="transaksi_fragment">Transaksi Fragment</string>
    <string name="transaksi">Transaction</string>
    <string name="customer">Customer</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>

    <!-- Dashboard -->
    <string name="BOPA">BACKOFFICE APP</string>
    <string name="admin">Selamat datang, Admin</string>
    <string name="halo_admin">Welcome back, Admin</string>
    <string name="agustus">AGUSTUS</string>
    <string name="transaksi_terbaru">Transaksi terbaru</string>
    <string name="total_transaksi">Total Transaksi</string>
    <string name="nominal_total_transaksi">209.457</string>
    <string name="presentasi_total_transaksi">78.9 %</string>
    <string name="total_omzet">Total Omzet</string>
    <string name="nominal_total_omzet">Rp180.300.600</string>
    <string name="presentasi_total_omzet">80.3 %</string>
    <string name="total_buyer">Total Buyer</string>
    <string name="nominal_total_buyer">25.304</string>
    <string name="presentasi_total_buyer">24.5 %</string>
    <string name="total_seller">Total Seller</string>
    <string name="nominal_total_seller">2.350</string>
    <string name="presentasi_total_seller">15.2 %</string>
    <string name="title_activity_detail_transaksi">DetailTransaksiActivity</string>
    <string name="lihatsemua">Lihat semua</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="profile">Profile</string>
    <string name="list_data_buyer_dan_seller_aplikasi_pansaka">List data buyer dan seller aplikasi PANSAKA</string>
    <string name="list_transaksi_aplikasi_pansaka">List transaksi aplikasi PANSAKA</string>
    <string name="nama_profile">Naufal Widi A.</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="keluar_dari_akun_anda">Keluar dari akun anda</string>
    <string name="txt_ubah_password">Ubah password anda dengan password terbaru.</string>
    <string name="title_ganti_password">Ganti Password</string>
    <string name="masukkan_password_baru">Masukkan password baru</string>
    <string name="masukkan_password_lama">Masukkan password lama</string>

    <string name="admin2">ADMIN</string>
    <string name="gantipassword">Ganti password akun anda</string>
    <string name="sukses">Sukses</string>
    <string name="tangga_transaksi">7 Juni 2021</string>
    <string name="harga_transaksi">Rp12.000.000</string>
    <string name="no_invoice">#490122512</string>
    <string name="toko_produk">Converse Indonesia</string>
    <string name="nama_produk">Sepatu Converse</string>
    <string name="quantity">12</string>
    <string name="pcs"> PCS</string>
    <string name="total_harga">Total Harga</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="detail_pemesanan">Detail Pemesanan</string>
    <string name="nomor_invoice">Nomor Invoice</string>
    <string name="apakah_anda_yakin">Apakah anda yakin ?</string>
    <string name="iya">Iya</string>
    <string name="tidak">Tidak</string>

    <string name="exemail">example@gmail.com</string>
    <string name="alamat">Malang</string>
    <string name="filter">Filter</string>
    <string name="startdate">Start date</string>
    <string name="enddate">End date</string>
    <string name="bulan">Agustus</string>
    <string name="setfilter">Set Filter</string>
    <string name="detailtransaksi">Detail Transaksi</string>

</resources>