<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_welcome_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welome"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tv_inputan_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome_login"
        android:layout_marginTop="20dp"
        android:text="@string/inputan"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_inputan_login"
        android:layout_marginTop="70dp"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_username_login"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/blueprimary"
        android:text="@string/masuk" />

</RelativeLayout>