<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".fragment.DashboardFragment">

    <TextView
        android:id="@+id/tv_welcome_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:fontFamily="@font/opensans_semibold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/dashboard"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tv_inputan_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome_dashboard"
        android:fontFamily="@font/opensans_regular"
        android:paddingStart="13dp"
        android:paddingEnd="10dp"
        android:text="@string/halo_admin"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_bulan_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_inputan_dashboard"
        android:fontFamily="@font/opensans_semibold"
        android:gravity="end"
        android:paddingEnd="15dp"
        android:text="@string/agustus"
        android:textColor="#FF515151"
        android:textSize="12sp" />


    <RelativeLayout
        android:id="@+id/container_dasboard_atas"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_below="@+id/tv_bulan_dashboard"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_dashboard" />

        <LinearLayout
            android:id="@+id/container_total_transaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/dasboard_stats_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/total_transaksi"
                android:textColor="#676767"
                android:textSize="11sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_extrabold"
                android:gravity="center"
                android:text="@string/nominal_total_transaksi"
                android:textColor="#0E77D6"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presentasi_total_transaksi"
                    android:textColor="#4CAF50"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_up" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_total_omset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_total_transaksi"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/dasboard_stats_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/total_omzet"
                android:textColor="#676767"
                android:textSize="11sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_extrabold"
                android:gravity="center"
                android:text="@string/nominal_total_omzet"
                android:textColor="#0E77D6"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presentasi_total_omzet"
                    android:textColor="#4CAF50"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_up" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/container_dasboard_bawah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_dasboard_atas"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dasboard_stats_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/total_buyer"
                android:textColor="#676767"
                android:textSize="11sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_extrabold"
                android:gravity="center"
                android:text="@string/nominal_total_buyer"
                android:textColor="#0E77D6"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presentasi_total_buyer"
                    android:textColor="#4CAF50"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_up" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/dasboard_stats_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/total_seller"
                android:textColor="#676767"
                android:textSize="11sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_extrabold"
                android:gravity="center"
                android:text="@string/nominal_total_seller"
                android:textColor="#0E77D6"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presentasi_total_seller"
                    android:textColor="#4CAF50"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_up" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/tv_transaksi_terbaru_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_dasboard_bawah"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/opensans_semibold"
        android:paddingStart="13dp"
        android:text="@string/transaksi_terbaru"
        android:textColor="@color/black"
        android:textSize="16dp" />


    <ListView
        android:id="@+id/list_view_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_transaksi_terbaru_dashboard"
        android:layout_marginTop="10dp">

    </ListView>

</RelativeLayout>