<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/cardview_light_background"
    tools:context=".activity.DetailTransaksiActivity">

    <LinearLayout
        android:id="@+id/atas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/status_transaksi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sukses"
            android:gravity="start"
            android:textSize="16sp"
            android:fontFamily="@font/opensans_regular"
            android:textColor="#009688"/>

        <TextView
            android:id="@+id/tanggal_transaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tangga_transaksi"
            android:gravity="end"
            android:textSize="15sp"
            android:fontFamily="@font/opensans_regular"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/atas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_produk_transaksi"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/mockup_foto_produk" />

        <LinearLayout
            android:id="@+id/bawah1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nama_produk_transaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/nama_produk"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nama_toko_transaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/toko_produk"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:fontFamily="@font/opensans_regular"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/harga_transaksi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harga_transaksi"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/opensans_regular"/>

                <TextView
                    android:id="@+id/invoice_transaksi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_invoice"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/opensans_italic"/>

                <TextView
                    android:id="@+id/qty_transaksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:fontFamily="@font/opensans_regular"
                    android:layout_marginTop="4dp"
                    android:gravity="end"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>