<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <LinearLayout
        android:id="@+id/container_profile_atas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_profile_bg"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:padding="20dp"
            android:src="@drawable/aw" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/nama_profile"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/admin2"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/container_profile_atas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ganti_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ganti_password"
                android:fontFamily="@font/opensans_semibold"
                android:textColor="@color/black"
                android:textSize="20sp"/>

           <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gantipassword"
                android:fontFamily="@font/opensans_regular"
                android:textColor="#515151"
                android:textSize="15sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C1C1C1"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/logout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:fontFamily="@font/opensans_semibold"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keluar_dari_akun_anda"
                android:fontFamily="@font/opensans_regular"
                android:textColor="#515151"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C1C1C1"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>